			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

24-Feb-2005
~~~~~~~~~~~
Look out for new line character when reading EA MIME type under Solaris 
(Stephen Watson).

13-Feb-2005
~~~~~~~~~~~
Added Estonian translation (Teet Tärno).

12-Feb-2005
~~~~~~~~~~~
Removed copy of GTK icon theme system. We now depend on GTK 2.4, which
includes it (Thomas Leonard).
Renamed 'Before' and 'After' in the bulk rename box to 'Old name' and
'New name', as they were causing problems for translators (reported by
Yuri Bongiorno).
Bugfix: The help for the "Set Type..." box wasn't translated (reported
	by Yuri Bongiorno).

09-Feb-2005
~~~~~~~~~~~
Defer re-generating a thumbnail until 5 seconds after the timestamp on 
the old one (Stephen Watson).
Bugfix: A file could be added many times to the thumbnail queue, causing
        the progress bar to behave strangely (Stephen Watson).
More changes for installing onto NFS mounted directory (Stephen Watson).

31-Jan-2005
~~~~~~~~~~~
Fixed a compiler warning by removing an unnecessary extra tooltips object
(Andreas Jochens).

30-Jan-2005
~~~~~~~~~~~
Updated French translation (Vincent Lefèvre).

29-Jan-2005 (Release 2.2.0)
~~~~~~~~~~~
Added Finnish translation (Jari Rahkonen).

24-Jan-2005
~~~~~~~~~~~
Bugfix: More crashes due to Japanese characters; last patch didn't fix all
	the problems (Thomas Leonard; reported by Lewis Denizen).

23-Jan-2005 (Release 2.1.6)
~~~~~~~~~~~
Updated French translation (Vincent Lefèvre).
Bugfix: Japanese digit characters crashed the filer, because some code thought
	they were digits, and anothers thought they weren't (Thomas Leonard;
	reported by Lewis Denizen).

22-Jan-2005
~~~~~~~~~~~
Updated French manual translation (Arnaud Calvo).

21-Jan-2005
~~~~~~~~~~~
Bugfix: If, when building, objcopy exits with an error then don't strip
	the binary (Stephen Watson).

20-Jan-2005
~~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).

18-Jan-2005
~~~~~~~~~~~