@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+28-Feb-2005
+~~~~~~~~~~~
+Bugfix: Progress bar for count operation didn't finish when the count did
+        (Stephen Watson, reported by Alexander Wagner).
+
 24-Feb-2005
 ~~~~~~~~~~~
 Look out for new line character when reading EA MIME type under Solaris 
